/*
 * This file was generated by the Gradle 'init' task.
 *
 * This project uses @Incubating APIs which are subject to change.
 */

plugins {
    id 'java'
    id 'maven-publish'
    id 'org.springframework.boot' version '3.0.4'
    id 'io.spring.dependency-management' version '1.1.0'
}

repositories {
    mavenLocal()
    maven {
        url = uri('https://repo.spring.io/milestone')
    }

    maven {
        url = uri('https://repo.maven.apache.org/maven2/')
    }
}

dependencies {
    implementation 'org.projectlombok:lombok:1.18.26'
    implementation 'org.springframework.boot:spring-boot-starter:3.0.4'
    implementation 'org.springframework.boot:spring-boot-actuator:3.0.4'
    implementation 'org.apache.kafka:kafka-streams:3.3.2'
    implementation 'org.springframework.kafka:spring-kafka:3.0.4'
    implementation 'org.json:json:20230227'
    implementation 'com.amazonaws:aws-java-sdk:1.11.486'
    implementation 'io.javalin:javalin:5.2.0'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.0.4'
    implementation 'org.eclipse.persistence:org.eclipse.persistence.jpa:4.0.1'
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-csv:2.14.0'
    implementation 'com.jayway.jsonpath:json-path:2.7.0'
    implementation 'mysql:mysql-connector-java:8.0.31'
    implementation 'org.postgresql:postgresql:42.5.1'
    implementation 'com.zaxxer:HikariCP:5.0.1'
    implementation 'org.apache.commons:commons-text:1.10.0'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.1'
}

group = 'hu.dpc.phee'
version = '1.0.0-SNAPSHOT'
description = 'importer-rdbms'

publishing {
    publications {
        maven(MavenPublication) {
            from(components.java)
        }
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

sourceCompatibility = "17.PREVIEW"
targetCompatibility = "17.PREVIEW"

test {
    useJUnitPlatform()
    jvmArgs(['--enable-preview'])
}

tasks.withType(JavaCompile).each {
    it.options.compilerArgs.add('--enable-preview')
}